# VideoTranscriptExtractor

./: .gitattributes  .gitignore  README.md
.github/: release-notes-template.md
.github/workflows/: build-installers.yml  build-main.yml
apps/desktop/: index.html  package.json  vitest.config.ts
apps/desktop/src/: App.css  App.tsx  Help.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/models/: README.md
apps/desktop/src-tauri/src/: db.rs  export_fmt.rs  lib.rs  main.rs  settings.rs  worker.rs
apps/desktop/src/__tests__/: App.test.tsx
apps/desktop/src/test/: tauriMocks.ts
docs/: DEPLOYMENT.md  FFMPEG.md  MODELS.md
docs/word/: Architecture_and_Diagrams.docx  User_Guide.docx
scripts/: build_transcriber_sidecar.ps1  build_transcriber_sidecar.sh  fetch_ffmpeg_linux.sh  fetch_ffmpeg_macos.sh  fetch_ffmpeg_windows.ps1  fetch_models.py  generate_docs.py  install-linux-tauri-deps.sh  requirements-bundling.txt  requirements-docs.txt
services/transcriber/: README.md  pyproject.toml  sidecar_entry.py
services/transcriber/src/transcriber/: __main__.py  audio.py  cli.py
