[package]
name = "video_transcript_extractor"
version = "0.1.0"
description = "Offline video transcript extractor"
authors = ["VideoTranscriptExtractor"]
edition = "2021"

[lib]
name = "video_transcript_extractor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
which = "6"

[[bin]]
name = "video_transcript_extractor"
path = "src/main.rs"
